--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 			<artifactId>spring-ai-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-watsonx-ai</artifactId>
@@ -48,6 +49,12 @@
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-watsonx-ai-spring-boot-starter</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 
 	</dependencies>
